tests/errors/ambiguous-trait-method/main.pa
# A trait method dispatched on a value whose type stays unbound.
trait showable a { show :: fun a -> string }

def main = print (show none)
